@@ -1,0 +1,9 @@
+#!/bin/bash
+
+if [ "$SDBROOT" = "" ]
+then
+    echo "SDBROOT not set" 1>&2
+    exit 1
+    fi
+
+exec "${SDBROOT}/bin/sdbdelete" "$@"
